force-app/main/default/objects/Credit_Order_Line__c/Credit_Order_Line__c.object-meta.xml
<CustomObject>
    <label>Credit Order Line</label>
    <nameField>
        <displayFormat>COL-{000000}</displayFormat>
        <label>Credit Order Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Order Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>