force-app/main/default/objects/Credit_Order_Line__c/fields/Allocated_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Quantity__c</fullName>
    <label>Allocated Quantity</label>
    <summarizedField>Credit_Order_Inventory_Movement__c.Quantity__c</summarizedField>
    <summaryForeignKey>Credit_Order_Inventory_Movement__c.Credit_Order_Line__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>