force-app/main/default/objects/Credit_Order_Line__c/fields/Alternate_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Image_URL__c</fullName>
    <label>Alternate Image URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>