force-app/main/default/objects/Credit_Order_Line__c/fields/AlternateImageURL_Trunc__c.field-meta.xml
<CustomField>
    <fullName>AlternateImageURL_Trunc__c</fullName>
    <formula>IF( CONTAINS(Alternate_Image_URL__c, &quot;/servlet&quot;),
IF(ISBLANK($User.ContactId),&quot;&quot;,&quot;/sales&quot; )&amp;MID(Alternate_Image_URL__c, FIND( &apos;/servlet&apos;, Alternate_Image_URL__c),
(LEN(Alternate_Image_URL__c) - FIND( &apos;/servlet&apos;, Alternate_Image_URL__c) +1)),
Alternate_Image_URL__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AlternateImageURL_Trunc</label>
    <type>Text</type>
</CustomField>