force-app/main/default/objects/Credit_Order_Line__c/fields/Available_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Available_Quantity__c</fullName>
    <formula>IF(
OR
(
Product__r.RecordType.DeveloperName = &apos;Product&apos;,
Product__r.RecordType.DeveloperName = &apos;Part&apos;
) ,
Product__r.Available_Quantity__c,
Product__r.Kit_Available_Quantity__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>