force-app/main/default/objects/Credit_Order_Line__c/fields/Credit_Card_Fee__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Card Fee</label>
    <type>Checkbox</type>
</CustomField>