force-app/main/default/objects/Credit_Order_Line__c/fields/Credit_Order__c.field-meta.xml
<CustomField>
    <fullName>Credit_Order__c</fullName>
    <label>Credit Order</label>
    <referenceTo>Credit_Order__c</referenceTo>
    <relationshipLabel>Credit Order Lines</relationshipLabel>
    <relationshipName>Credit_Order_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>