force-app/main/default/objects/Credit_Order_Line__c/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <formula>if(

LEN(AlternateImageURL_Trunc__c)!=0, AlternateImageURL_Trunc__c,
if(
LEN(Product__r.ProductImageURL__c)=0,&quot;&quot;,Product__r.ProductImageURL__c

)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image</label>
    <type>Text</type>
</CustomField>