force-app/main/default/objects/Credit_Order_Line__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Credit Order Lines</relationshipLabel>
    <relationshipName>Credit_Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>