force-app/main/default/objects/Credit_Order_Line__c/fields/Quantity_Needed__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Needed__c</fullName>
    <formula>Quantity_Ordered__c -  Allocated_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity Needed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>