force-app/main/default/objects/Credit_Order_Line__c/fields/Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Order</label>
    <referenceTo>AcctSeedERP__Sales_Order__c</referenceTo>
    <relationshipLabel>Credit Order Lines</relationshipLabel>
    <relationshipName>Credit_Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>