force-app/main/default/objects/Credit_Order_Line__c/fields/Sales_Order_Line__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Line__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Sales Order Line</label>
    <referenceTo>AcctSeedERP__Sales_Order_Line__c</referenceTo>
    <relationshipLabel>Credit Order Lines</relationshipLabel>
    <relationshipName>Credit_Order_Lines</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>