force-app/main/default/objects/Credit_Order_Line__c/fields/Shipped_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Shipped_Quantity__c</fullName>
    <label>Shipped Quantity</label>
    <summarizedField>Shipment_Line_Credit_Order__c.Quantity_Shipped__c</summarizedField>
    <summaryForeignKey>Shipment_Line_Credit_Order__c.Credit_Order_Line__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>