force-app/main/default/objects/Credit_Order_Line__c/validationRules/Quantity_Less_Than_AllocatedOrShipped.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_Less_Than_AllocatedOrShipped</fullName>
    <active>true</active>
    <errorConditionFormula>(Quantity_Ordered__c &lt;  Allocated_Quantity__c) || (Quantity_Ordered__c &lt;  Shipped_Quantity__c)</errorConditionFormula>
    <errorDisplayField>Quantity_Ordered__c</errorDisplayField>
    <errorMessage>Quantity can&apos;t be less than quantity allocated or quantity shipped.</errorMessage>
</ValidationRule>