force-app/main/default/objects/Credit_Order_Line__c/validationRules/Sales_Order_Is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Sales_Order_Is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>Sales_Order__c == null</errorConditionFormula>
    <errorMessage>Sales Order field is required and can not be empty.</errorMessage>
</ValidationRule>